# AC_Project

./: README.md  cpus.txt
Grain_128_implementation/: bruteforce_cpu.hpp.txt  bruteforce_gpu_enhanced.cuh  ciphers_enhanced.cuh  main (1).cu
lightweight_ciphers_project_GPU_bruteforce/: CMakeLists.txt  PRESENT_OPTIMIZATIONS.md  README.md  plot_cpu_vs_gpu.py  plot_results.py  results_1bit.csv  results_CPU_optimizations.csv  results_aes.csv  results_all.csv  results_grain128.csv  results_salsa20.csv  results_snowv_new.csv
lightweight_ciphers_project_GPU_bruteforce/src/: bruteforce_cpu.hpp  bruteforce_gpu_enhanced.cuh  ciphers_enhanced.cuh  cpu_optimized.hpp  main.cu  util.hpp
lightweight_ciphers_project_present_optimized/: CMakeLists.txt  README.md  plot_results.py  results_present.csv  results_project_b.csv
lightweight_ciphers_project_present_optimized/src/: bruteforce_cpu.hpp  bruteforce_gpu_enhanced.cuh  ciphers_enhanced.cuh  main.cu  present_spbox_tables.inc
